--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<DOCTYPE html>
+<html>
 <head>
 <title>MarinaKy.github.io by Marn</title> 
 </head>
+<link rel="stylesheet" type="text/css" href="exam.css">
+      
+      <p>I don't understand TT-TT </p>
+    <img src="Crying_banana.gif">
+    <img src="imgresSASHIMIII.jpg">
 </html>
